force-app/main/default/objects/User/fields/ColleagueAccountId__c.field-meta.xml
<CustomField>
    <fullName>ColleagueAccountId__c</fullName>
    <description>This field will store the ID of the user&apos;s colleague account. This will be used by Cognito and passed through to it in the connected app.</description>
    <label>Colleague account ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>