force-app/main/default/objects/User/fields/EmailReview__c.field-meta.xml
<CustomField>
    <fullName>EmailReview__c</fullName>
    <description>Check is user needs their emails reviewed before sending</description>
    <label>Email review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>