force-app/main/default/objects/User/fields/FinServWaveExt__WavePermissions__c.field-meta.xml
<CustomField>
    <fullName>FinServWaveExt__WavePermissions__c</fullName>
    <description>Enter View All to give users access to all data in Wave for Financial Services Cloud.</description>
    <label>FSC Analytics Permissions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>