force-app/main/default/objects/User/fields/GoogleDriveFolderId__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderId__c</fullName>
    <description>Captures, for partners, their top level Google Drive folder ID as this drives automation such as where new household folders should be created.</description>
    <label>Google Drive folder ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>