force-app/main/default/objects/User/fields/GroupCompany__c.field-meta.xml
<CustomField>
    <fullName>GroupCompany__c</fullName>
    <description>Denotes which company within the group the account belongs to.</description>
    <label>Group company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OW</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>