force-app/main/default/objects/User/fields/HubwiseEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>HubwiseEmployeeId__c</fullName>
    <description>Stores the user&apos;s Hubwise Employee ID, if they have one. This is used in generating Hubwise links.</description>
    <label>Hubwise rmployee ID</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>