force-app/main/default/objects/User/fields/IntegrationReference__c.field-meta.xml
<CustomField>
    <fullName>IntegrationReference__c</fullName>
    <description>If user is an integration user, this field specified which integration they perform so that the user record can be accurately referenced across code, flow, formulas and be consistent between sandboxes</description>
    <label>Integration Reference</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_user_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PORTAL</fullName>
                <label>Portal</label>
            </value>
            <value>
                <fullName>CALENDLY</fullName>
                <label>Calendly</label>
            </value>
            <value>
                <fullName>PARDOT</fullName>
                <label>Pardot</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>