force-app/main/default/objects/User/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description>User type attribute is used to control business logic relating to users like whether there should be an associated colleague account.</description>
    <label>User type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>COLLEAGUE</fullName>
                <label>Colleague</label>
            </value>
            <value>
                <fullName>CONSULTANT</fullName>
                <label>Consultant</label>
            </value>
            <value>
                <fullName>INTEGRATION</fullName>
                <label>Integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>